# django

./: pyproject.toml
home/home/: settings.py  urls.py
home/quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
home/quotes/static/quotes/: style.css
home/quotes/templates/quotes/: author_detail.html  base.html  create_author.html  create_quote.html  details.html  index.html  search_result.html  top_ten_tags.html
home/users/: forms.py  urls.py  views.py
home/users/templates/users/: register.html
homework/homework/: settings.py  urls.py
homework/noteapp/: forms.py  models.py  views.py
homework/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag of username.py
homework/noteapp/static/noteapp/: style.css
homework/noteapp/templates/noteapp/: base.html  index.html
homework/users/: forms.py  views.py
homework/users/templates/users/: login.html  profile.html
