[tool.poetry]
name = "django"
version = "0.1.0"
description = ""
authors = ["Grenui92 <grenui92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
scrapy = "^2.8.0"
aiofiles = "^23.1.0"
sqlalchemy = "^2.0.4"
django = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
